<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/widget_root" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:padding="16dp" android:background="@drawable/widget_background">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/app_name" android:textColor="#554536" android:textStyle="bold" android:textSize="14sp" />
    <TextView android:id="@+id/widget_status" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/widget_initial_status" android:textColor="#625C51" android:textSize="13sp" android:layout_marginTop="8dp" />
    <TextView android:id="@+id/widget_amount" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/widget_initial_amount" android:textColor="#332E28" android:textSize="26sp" android:textStyle="bold" />
    <TextView android:id="@+id/widget_points" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/widget_initial_points" android:textColor="#625C51" android:textSize="14sp" />
    <TextView android:id="@+id/widget_time" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/widget_initial_instruction" android:textColor="#625C51" android:textSize="11sp" android:layout_marginTop="8dp" />
</LinearLayout>
